--- a/src/style.css
+++ b/src/style.css
@@ -1,2 +1,83 @@
 @import "tailwindcss";
 
+/* @layer base;
+@layer components;
+@layer utilities; */ /* Design tokens */
+
+@theme {
+  --color-surface: oklch(98.5% 0.002 247.839);
+  --color-border: oklch(92.8% 0.006 264.531);
+  --color-text: oklch(21% 0.034 264.665);
+  --color-muted: oklch(55.1% 0.027 264.364);
+  --color-primary: oklch(54.6% 0.245 262.881);
+  --color-primaryHover: oklch(48.8% 0.243 264.376);
+  --color-danger: oklch(57.7% 0.245 27.325);
+  --color-rowHover: oklch(96.7% 0.003 264.542);
+  --color-rowSelected: oklch(97% 0.014 254.604);
+}
+
+/* Base styles */
+
+@layer base {
+  body {
+    @apply bg-white text-text text-base w-4/5 m-auto;
+  }
+
+  h1 {
+    @apply text-3xl font-medium mt-12 mb-4;
+  }
+
+  label {
+    @apply text-base font-medium text-muted capitalize;
+  }
+
+  table {
+    @apply w-full border-collapse mb-5;
+  }
+
+  th {
+    @apply text-left font-medium text-muted  border-b px-3 py-3 bg-surface border-border;
+  }
+
+  td {
+    @apply text-text border-b px-3 py-3 border-surface capitalize;
+  }
+
+  tbody tr:hover {
+    @apply bg-rowHover;
+  }
+
+  input,
+  select {
+    @apply border border-border rounded-md px-2 py-1.5
+           bg-white text-sm
+           focus:outline-none focus:ring-2 focus:ring-primary/30 capitalize;
+  }
+}
+
+/* Component Tokens (@layer components) */
+
+@layer components {
+  .btn {
+    @apply inline-flex items-center justify-center
+           px-3 py-1.5 rounded-md
+           text-sm font-medium
+           border border-border hover:cursor-pointer capitalize;
+  }
+
+  .btn-primary {
+    @apply bg-primary text-white border-primary
+           hover:bg-primaryHover;
+  }
+
+  .btn-danger {
+    @apply bg-danger text-white border-danger
+           hover:opacity-90 px-2 py-1;
+  }
+
+  .btn-ghost {
+    @apply text-muted bg-surface
+           hover:text-text;
+  }
+}
+
