add indeteminate state to select all checkbox and fix styles for selected expense items

--- a/src/style.css
+++ b/src/style.css
@@ -84,5 +84,9 @@
   .selection-bar {
     @apply text-base text-green-400 flex items-center;
   }
+
+  .expense-selected {
+    @apply bg-rowSelected;
+  }
 }
 
